# addressbook

./: README.md  addressbook.py  database.py  main.py  pyproject.toml
.code_quality/: .pylintrc
src/: addressbook.py  database.py  main.py
src/addressbook/domain/: contact.py
src/base/domain/: identifiers.py  normalizers.py  tracer.py  validators.py
tests/unit/addressbook/domain/: test_contact.py
tests/unit/base/domain/: test_normalizers.py  test_validators.py
