[tool.poetry]
name = "addressbook"
version = "0.1.0"
description = "A clean code architecture sample"
authors = ["Alfonso Montilla <alfonso.montilla@tarmac.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.21.1"
pylint = "^3.1.0"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
